2006-02-22  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_addPrinterToClass): Implemented.
	(Connection_deletePrinterFromClass): Implemented.
	(Connection_addPrinter): Added 'info', 'location', and 'device'
	keywords.
	(add_modify_printer_request): New utility function.
	(Connection_setPrinterInfo): Implemented.
	(Connection_setPrinterLocation): Implemented.

	* cupsmodule.c (initcups): Added printer states constants.

	* cupsconnection.c: More consistent error handling.
	(do_printer_request): Fixed ipp_t leak.
	(Connection_addPrinter): Likewise.
	(Connection_setPrinterDevice): Likewise.
	(set_ipp_error): Make use of cupsLastErrorString conditional on
	CUPS 1.2.

	* cupsconnection.c (Connection_putFile): Fixed ipp_t leak.
	(set_ipp_error): "i" -> "(is)" for IPPError.

	* cupsmodule.h: New file.

	* cupsconnection.c (Connection_getDevices): Implemented.

2006-02-21  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getPPDs): Implemented.

	* cupsppd.c (Group_getOptions): Return a list, not a dict, to
	preserve the order of options.
	* test.py (test_cups_module): Updated.

	* cupsconnection.c (Connection_addPrinter): Allow adding a printer
	from a ppd-name instead of a filename.

	* cupsconnection.c (Connection_getFile): Fixed ipp_t leak.

	* cupsppd.c (PPD_getOptionGroups): Make this an attribute not a
	method.
	* test.py (test_cups_module): Updated.

	* cupsppd.c: Implement 'Constraint' type.
	* cupsppd.h: Declare cups_ConstraintType.
	* cupsmodule.c (initcups): Add 'Constraint' type.

	* cupsconnection.c (Connection_getPrinters): Do this inline
	instead of in a separate function.
