@@ -7,6 +7,7 @@
 	(add_modify_printer_request): New utility function.
 	(Connection_setPrinterInfo): Implemented.
 	(Connection_setPrinterLocation): Implemented.
+	(Connection_getClasses): Implemented.
 
 	* cupsmodule.c (initcups): Added printer states constants.
 
